--- a/lularizer-wireframe/mdl/mdl-custom.css
+++ b/lularizer-wireframe/mdl/mdl-custom.css
@@ -47,3 +47,12 @@
 .mdl-card__actions button {
     margin-left: 8px;
 }
+
+footer {
+    position: fixed;
+    left: 0; bottom: 0;
+    height: 64px; width: 100%;
+    background: #fff;
+    text-align: center;
+    z-index: 1;
+}
