--- a/inc/main.css
+++ b/inc/main.css
@@ -59,17 +59,24 @@ section p a:visited, section p a:hover {
 section p a i {
     float: left;
 }
-#email a {background: #64ccc9; }
-#facebook a {background: #8bb8e8; }
-#instagram a {background: #dd7fd3; }
-#periscope a {background: #9595d2; }
-#youtube a {background: #f97599; }
+#swiftorder a i {
+    font-family: sans-serif;
+}
 
-#email a:hover {background: #ff9d68; }
+#links p a:hover {background: #888b8d; }
+#swiftorder a {background: #ff9d68; }
+#facebook a {background: #f97599; }
+#periscope a {background: #dd7fd3; }
+#instagram a {background: #9595d2; }
+#email a {background: #8bb8e8; }
+#youtube a {background: #64ccc9; }
+
+/*#email a:hover {background: #ff9d68; }
+#swiftorder a:hover {background: #ff9d68; }
 #facebook a:hover {background: #ff9d68; }
 #instagram a:hover {background: #ff9d68; }
 #periscope a:hover {background: #ff9d68; }
-#youtube a:hover {background: #ff9d68; }
+#youtube a:hover {background: #ff9d68; }*/
 
 section img {
     width: 100%;
