--- a/inc/main.css
+++ b/inc/main.css
@@ -84,7 +84,7 @@ section img {
     body {width: auto; }
     header h2 {margin: 0; }
     header h2 img {width: 250px; }
-    section {margin: 0 auto; float: none; width: auto; max-width: 400px; }
+    section {margin: 0 auto; float: none; width: auto; max-width: 400px; padding-left: 0; }
     section h3 {text-align: center; }
     section p {padding-right: 0; }
 }
